			Java Electric change log

FIX/IMP (8/19/04, RK) NCC check's assertions: exportsConnectedByParent. It turns out that assertion checking is needed to avoid a bug in netlist construction.

************************* Version 8.01h: *********************************

BUG: (8/18/04, SMR) "Show Ports On Node" and "Show Exports" display incorrectly when zoomed in.
FIX: Determines visible ports before arranging them on the display.

BUG/MAN: (8/18/04, SMR) "Size" on nodes doesn't work right for mirrored nodes; should not be center-based.
FIX: Size now works from farthest corner (unless Control is held).

FIX/IMP/MAN: (8/18/04, JKG) copy/paste fixes: default paste by center point, 
    can move anchor point, shows delta from copy to paste. Right click menu added when pasting.

IMP (8/18/04, GVG): Extra sizing rules for metals (another level) and area

************************* Version 8.01g: *********************************

FIX (8/17/04, RK) exportsConnectedByParent works on "implicit" expots created for global signals

IMP/MAN: (8/17/04, GVG) More rules for new technology. Important changes in DRC code so previous version was tagged as version-8-01g just in case

FIX (8/15/04, JKG) Closing a library now actually closes all Cells in library as well.

IMP/MAN (8/15/04, JKG) Added library palette to Components palette.

************************* Version 8.01f: *********************************

FIX: (8/13/04, JKG) Round doubles before truncating to int in ELIB writer, fixes
    instances moving because of doubles precision errors.

FIX: (8/13/04, JKG) Various fixes to Highlighter introduced in last version

IMP/MAN (8/13/04, JKG) Show networks now works hierarchically for layout (keep hitting ctrl-k)

IMP: (8/13/04, RK) "Better" NCC error reporting for Hash Code parition failures

IMP: (8/13/04, RK) NCC reports Part and Wire counts

IMP: (8/13/04, RK) NCC summarizes Export, topology, and size mismatches separately for each Cell and then for all Cells
